--- a/prescription_management/views/clinic_service_templates.xml
+++ b/prescription_management/views/clinic_service_templates.xml
@@ -3,6 +3,14 @@
     <!-- Template for listing clinic services -->
     <template id="clinic_services_template" name="Clinic Services">
         <t t-call="website.layout">
+            <style>
+                .table th {
+                background-color: #007bff;
+                color: #fff;
+                padding: 12px;
+                text-align: center;
+                }
+            </style>
             <div class="container mt-4">
                 <div class="row mb-3">
                     <div class="col-12">
