--- a/prescription_management/views/pharmacy_dashboard_template.xml
+++ b/prescription_management/views/pharmacy_dashboard_template.xml
@@ -14,7 +14,7 @@
                         </div>
                         <div class="col-md-4 text-right">
                             <a href="/pharmacy/prescriptions" class="btn btn-primary">
-                                <i class="fa fa-search"></i>
+                                <i class="fa fa-search"/>
                                 Tìm kiếm đơn thuốc
                             </a>
                         </div>
@@ -28,7 +28,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-3">
-                                        <i class="fa fa-pills fa-3x"></i>
+                                        <i class="fa fa-pills fa-3x"/>
                                     </div>
                                     <div class="col-9 text-right">
                                         <h3 t-esc="product_count"/>
@@ -38,7 +38,7 @@
                                 <a href="/pharmacy/products" class="text-white">
                                     <div class="card-footer bg-primary-dark text-center">
                                         <span>Chi tiết
-                                            <i class="fa fa-arrow-right"></i>
+                                            <i class="fa fa-arrow-right"/>
                                         </span>
                                     </div>
                                 </a>
@@ -50,7 +50,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-3">
-                                        <i class="fa fa-clipboard-list fa-3x"></i>
+                                        <i class="fa fa-clipboard-list fa-3x"/>
                                     </div>
                                     <div class="col-9 text-right">
                                         <h3 t-esc="prescription_count"/>
@@ -60,7 +60,7 @@
                                 <a href="/pharmacy/prescriptions" class="text-white">
                                     <div class="card-footer bg-success-dark text-center">
                                         <span>Chi tiết
-                                            <i class="fa fa-arrow-right"></i>
+                                            <i class="fa fa-arrow-right"/>
                                         </span>
                                     </div>
                                 </a>
@@ -72,7 +72,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-3">
-                                        <i class="fa fa-stethoscope fa-3x"></i>
+                                        <i class="fa fa-stethoscope fa-3x"/>
                                     </div>
                                     <div class="col-9 text-right">
                                         <h3 t-esc="service_count"/>
@@ -82,7 +82,7 @@
                                 <a href="/pharmacy/services" class="text-white">
                                     <div class="card-footer bg-info-dark text-center">
                                         <span>Chi tiết
-                                            <i class="fa fa-arrow-right"></i>
+                                            <i class="fa fa-arrow-right"/>
                                         </span>
                                     </div>
                                 </a>
@@ -94,7 +94,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-3">
-                                        <i class="fa fa-exclamation-triangle fa-3x"></i>
+                                        <i class="fa fa-exclamation-triangle fa-3x"/>
                                     </div>
                                     <div class="col-9 text-right">
                                         <h3 t-esc="low_stock_count"/>
@@ -104,7 +104,7 @@
                                 <a href="/pharmacy/products?filter=low_stock" class="text-white">
                                     <div class="card-footer bg-warning-dark text-center">
                                         <span>Chi tiết
-                                            <i class="fa fa-arrow-right"></i>
+                                            <i class="fa fa-arrow-right"/>
                                         </span>
                                     </div>
                                 </a>
@@ -125,25 +125,25 @@
                                     <div class="col-md-3 mb-3">
                                         <a href="/pharmacy/new_prescription"
                                            class="btn btn-outline-primary btn-block py-3">
-                                            <i class="fa fa-file-medical fa-2x d-block mb-2"></i>
+                                            <i class="d-block mb-2"/>
                                             Tạo đơn thuốc mới
                                         </a>
                                     </div>
                                     <div class="col-md-3 mb-3">
                                         <a href="/pharmacy/product/new" class="btn btn-outline-success btn-block py-3">
-                                            <i class="fa fa-capsules fa-2x d-block mb-2"></i>
+                                            <i class="d-block mb-2"/>
                                             Thêm dược phẩm mới
                                         </a>
                                     </div>
                                     <div class="col-md-3 mb-3">
                                         <a href="/pharmacy/products" class="btn btn-outline-info btn-block py-3">
-                                            <i class="fa fa-warehouse fa-2x d-block mb-2"></i>
+                                            <i class="d-block mb-2"/>
                                             Quản lý kho thuốc
                                         </a>
                                     </div>
                                     <div class="col-md-3 mb-3">
                                         <a href="/pharmacy/services" class="btn btn-outline-secondary btn-block py-3">
-                                            <i class="fa fa-hand-holding-medical fa-2x d-block mb-2"></i>
+                                            <i class="d-block mb-2"/>
                                             Dịch vụ phòng khám
                                         </a>
                                     </div>
@@ -221,7 +221,14 @@
                                                     Giá:
                                                     <t t-esc="'{:,.0f}'.format(product.unit_price)"/>
                                                     VNĐ |
-                                                    <t t-esc="product.uom_id"/>
+                                                    <td>
+                                                        <t t-if="product.uom_id == 'pill'">Viên</t>
+                                                        <t t-elif="product.uom_id == 'bottle'">Chai</t>
+                                                        <t t-elif="product.uom_id == 'box'">Hộp</t>
+                                                        <t t-elif="product.uom_id == 'pack'">Gói</t>
+                                                        <t t-elif="product.uom_id == 'tube'">Ống</t>
+                                                        <t t-else="" t-esc="product.uom_id"/>
+                                                    </td>
                                                 </small>
                                             </a>
                                         </t>
